Avoid table breaking design on small screen

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -151,6 +151,11 @@
   }
 }
 
+/* Avoid table overflow on small screens */
+table{
+  @apply block overflow-x-auto;
+}
+
 /* Specific style for about page */
 section[id="about"] li img {
   @apply w-5 h-5 mr-2 inline-block;
